# hivemind

./: .gitignore  AGENTS.md  CLAUDE.md  HIVEMIND.md  README.md  config.json  pyproject.toml  repos.json  settings.json  todo.md
commands/: commit.md  create-repo-expert.md  generate_pr_description.md  update-repo-expert.md
crawl_site/: __init__.py  __main__.py  cli.py  crawler.py
experts/Krohnkite/: HEAD
experts/bazel/: HEAD  agent.md  apis_and_interfaces.md  build_system.md  code_structure.md  summary.md
experts/bazel-central-registry/: HEAD
experts/bazel-lib/: HEAD
experts/bazel-skylib/: HEAD  agent.md  summary.md
experts/crawl4ai/: HEAD
experts/dendritic/: HEAD
experts/distroless/: HEAD
experts/flake-parts/: HEAD
experts/formily/: HEAD
experts/home-manager/: HEAD
experts/import-tree/: HEAD
experts/joi/: HEAD
experts/metaflow/: HEAD
experts/nix.dev/: HEAD
experts/nixpkgs/: HEAD
experts/nixvim/: HEAD
experts/nocobase/: HEAD
experts/nocodb/: HEAD
experts/openapi-diff/: HEAD
experts/opencode/: HEAD
experts/plasma-manager/: HEAD
experts/rich/: HEAD
experts/rich-cli/: HEAD
experts/rules_distroless/: HEAD
experts/rules_img/: HEAD
experts/rules_multirun/: HEAD
experts/rules_py/: HEAD
experts/rules_python/: HEAD
experts/rules_testing/: HEAD
experts/rules_uv/: HEAD
experts/textual/: HEAD
hivemind_cli/: __init__.py  __main__.py  cli.py  core.py  crawler.py  providers.py  templates.py
hivemind_cli/tui/: __init__.py  app.py  models.py  operations.py  styles.tcss
scripts/: regenerate_agents.py
(+175 files in other folders)
